Alterado versão da JVM para 17 e alterado o processo paralelo para Thread convencional